FIXED scrollbar

--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   font-family: "Urbanist", sans-serif;
   line-height: 1.5;
